<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenNMS</string>
    <string name="app_name_full">OpenNMS Android Client</string>

    <!-- Nodes -->
    <string name="nodes">Nodes</string>
    <string name="nodes_list_empty">No nodes</string>
    <string name="node_details">Node #</string>
    <string name="node_details_id">ID</string>
    <string name="node_details_contact">Contact</string>
    <string name="node_details_creation_time">Creation time</string>
    <string name="node_details_label_source">Label source</string>
    <string name="node_label_source_address">IP address</string>
    <string name="node_label_source_hostname">Hostname</string>
    <string name="node_label_source_sysname">SNMP name</string>
    <string name="node_label_source_userdefined">User defined</string>
    <string name="node_details_description">Description</string>
    <string name="node_details_location">Location</string>
    <string name="node_sys_object_id">sysObjectId</string>
    <string name="loading_alarms">Loading alarms&#8230;</string>
    <string name="no_outstanding_alarms">No outstanding alarms.</string>
    <string name="loading_outages">Loading outages&#8230;</string>
    <string name="no_outages">No outages.</string>
    <string name="loading_events">Loading events&#8230;</string>
    <string name="no_events">No events.</string>

    <!-- Outages -->
    <string name="outages">Outages</string>
    <string name="outages_current">Current outages</string>
    <string name="outages_resolved">Resolved outages</string>
    <string name="outages_all">All outages</string>
    <string name="outages_list_empty">No outages</string>
    <string name="outage_details">Outage #</string>
    <string name="outage_details_id">Outage #</string>
    <string name="outage_details_service_id">Service ID</string>
    <string name="outage_details_service_type">Service type</string>
    <string name="outage_details_ip_address">IP address</string>
    <string name="outage_details_ip_interface_id">IP interface ID</string>
    <string name="outage_details_node">Node</string>
    <string name="outage_details_lost_event">Lost service event</string>
    <string name="outage_details_regained_event">Regained service event</string>

    <!-- Alarms -->
    <string name="alarms">Alarms</string>
    <string name="outstanding_alarms">Outstanding alarms</string>
    <string name="acked_alarms">Acknowledged alarms</string>
    <string name="alarms_list_empty">No alarms</string>
    <string name="alarm_details">Alarm #</string>
    <string name="alarm_details_id">Alarm #</string>
    <string name="alarm_details_acked">Acknowledged</string>
    <string name="alarm_details_not_acked">Outstanding</string>
    <string name="alarm_details_acked_by">by</string>
    <string name="alarm_details_node">Node</string>
    <string name="alarm_details_service_type">Service type</string>
    <string name="alarm_details_last_event">Last event</string>
    <string name="alarm_details_desc">Description</string>
    <string name="alarm_details_message">Message</string>
    <string name="alarm_severity_critical">Critical</string>
    <string name="alarm_severity_major">Major</string>
    <string name="alarm_severity_minor">Minor</string>
    <string name="alarm_severity_warning">Warning</string>
    <string name="alarm_severity_indeterminate">Indeterminate</string>
    <string name="alarm_severity_normal">Normal</string>
    <string name="alarm_severity_cleared">Cleared</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="unacknowledge">Unacknowledge</string>
    <string name="alarm_ack_success">Alarm #%d has been acknowledged.</string>
    <string name="alarm_ack_fail_offline">Cannot acknowledge. Device is offline.</string>
    <string name="alarm_unack_success">Alarm #%d has been unacknowledged.</string>
    <string name="alarm_unack_fail_offline">Cannot unacknowledge. Device is offline.</string>

    <!-- Events -->
    <string name="latest_events">Latest events</string>
    <string name="events_list_empty">No events</string>
    <string name="event_details">Event #</string>
    <string name="event_details_id">Event #</string>
    <string name="event_details_service_type">Service type</string>
    <string name="event_details_node">Node</string>
    <string name="event_details_log_message">Log message</string>
    <string name="event_details_desc">Description</string>
    <string name="event_details_host">Host</string>
    <string name="event_details_ip_address">IP address</string>
    <string name="event_details_create_time">Time</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_apply">Apply</string>
    <string name="settings_check">Check server</string>
    <string name="settings_auth">Authentication</string>
    <string name="settings_user">User</string>
    <string name="settings_user_dialog_title">Set username</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_dialog_title">Set password</string>
    <string name="settings_server">Server</string>
    <string name="settings_host">Host</string>
    <string name="settings_host_dialog_title">Set host</string>
    <string name="settings_rest_url">REST URL</string>
    <string name="settings_rest_url_title">Set REST URL</string>
    <string name="settings_port">Port</string>
    <string name="settings_port_dialog_title">Set port number</string>
    <string name="settings_https">HTTPS</string>
    <string name="settings_https_on">Turned on</string>
    <string name="settings_https_off">Turned off</string>
    <string name="settings_alarm_notifications">Alarm notifications</string>
    <string name="settings_notifications_enabled">Notifications enabled</string>
    <string name="settings_notifications_enabled_true">Alarm notifications enabled</string>
    <string name="settings_notifications_enabled_false">Alarm notifications disabled</string>
    <string name="settings_wifi_only">Wi-Fi only synchronization</string>
    <string name="settings_minimal_severity">Minimal severity</string>
    <string name="settings_sync_rate">Synchronization rate</string>
    <string name="settings_sync_rate_dialog_title">Alarms synchronization rate (minutes)</string>
    <string name="settings_sync_rate_minutes_singular">minute</string>
    <string name="settings_sync_rate_minutes_plural">minutes</string>
    <string name="server_check_wait">Checking connection to server. Please wait.</string>
    <string name="server_check_ok">Connection successful. Server settings are correct.</string>
    <string name="server_check_not_ok">Can\'t connect to server. Make sure settings are correct.</string>
    <string name="server_check_failed">Error occurred while checking connection!</string>
    <string name="server_check_offline">Can\'t check connection. Device is offline.</string>
    <!-- Dialogs in settings -->
    <string name="settings_apply_message">Apply changes?</string>
    <string name="settings_discard_message">Discard changes?</string>
    <string name="settings_dialog_apply">Apply</string>
    <string name="settings_dialog_discard">Discard</string>
    <string name="settings_dialog_cancel">Cancel</string>

    <!-- TitleActivity -->
    <string name="title_activity_configure_button">Configure connection</string>
    <string name="title_activity_demo_button">Try demo</string>
    <string name="title_activity_tip_toast">You can go to settings and connect to your OpenNMS server
        when you ready.</string>

    <!-- Notifications -->
    <string name="new_alarms_notif_title">New alarms</string>
    <string name="new_alarms_notif_text_singular">There is a new alarm!</string>
    <string name="new_alarms_notif_text_plural">There are %d new alarms!</string>
    <string name="sync_failed_notif_title">Alarms sync failed</string>
    <string name="sync_failed_notif_text">Device is not connected to network.</string>
    <string name="sync_failed_notif_text_wifi">Device is not connected to Wi-Fi.</string>

    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>

    <string name="refresh">Refresh</string>
    <string name="refresh_failed_offline">Cannot refresh. Device is offline.</string>
    <string name="no_items">No items</string>
    <string name="no_details">Select item from the list\n to view details.</string>
    <string name="loading_details">Loading details&#8230;</string>
    <string name="details_error">Error occurred during details loading process.</string>

    <string name="search">Search</string>

    <string name="about">About</string>
    <string name="about_info"><![CDATA[
        OpenNMS Copyright © 2002-2014 The OpenNMS Group, Inc.
        <br/>OpenNMS® is a registered trademark of The OpenNMS Group, Inc.
        <br/><br/><a href="http://www.opennms.org/">http://www.opennms.org/</a>
    ]]></string>
    <string name="version">Version:</string>
    <string name="unknown">Unknown</string>

    <string name="close_dialog">Close</string>
    <string name="loading">Loading&#8230;</string>

</resources>