<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Keys must be the same as in org.opennms.android.settings.* classes. -->

    <PreferenceCategory android:title="@string/settings_server">
        <EditTextPreference
            android:defaultValue="@string/default_host"
            android:dialogTitle="@string/settings_host_dialog_title"
            android:inputType="textUri"
            android:key="connection_host"
            android:title="@string/settings_host" />
        <EditTextPreference
            android:defaultValue="@integer/default_port"
            android:dialogTitle="@string/settings_port_dialog_title"
            android:inputType="number"
            android:key="connection_port"
            android:title="@string/settings_port" />
        <CheckBoxPreference
            android:defaultValue="@bool/default_https"
            android:key="connection_https"
            android:title="@string/settings_https" />
        <EditTextPreference
            android:defaultValue="@string/default_rest_url"
            android:dialogTitle="@string/settings_rest_url_title"
            android:inputType="textUri"
            android:key="connection_rest_url"
            android:title="@string/settings_rest_url" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_auth">
        <EditTextPreference
            android:defaultValue="@string/default_user"
            android:dialogTitle="@string/settings_user_dialog_title"
            android:key="connection_user"
            android:title="@string/settings_user" />
        <EditTextPreference
            android:defaultValue="@string/default_password"
            android:dialogTitle="@string/settings_password_dialog_title"
            android:inputType="textPassword"
            android:key="connection_password"
            android:title="@string/settings_password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_alarm_notifications">
        <CheckBoxPreference
            android:defaultValue="@bool/default_notifications"
            android:key="notifications_enabled"
            android:title="@string/settings_notifications_enabled" />
        <ListPreference
            android:defaultValue="@string/default_minimal_severity"
            android:entries="@array/severity"
            android:entryValues="@array/severity_values"
            android:key="minimal_notification_severity"
            android:title="@string/settings_minimal_severity" />
        <EditTextPreference
            android:defaultValue="@integer/default_sync_rate_minutes"
            android:dialogTitle="@string/settings_sync_rate_dialog_title"
            android:inputType="numberSigned"
            android:key="sync_rate"
            android:title="@string/settings_sync_rate" />
        <CheckBoxPreference
            android:defaultValue="@bool/wifi_only"
            android:key="sync_wifi_only"
            android:title="@string/settings_wifi_only" />
    </PreferenceCategory>

</PreferenceScreen>
