<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/outage_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="@dimen/details_horizontal_margin"
        android:paddingLeft="@dimen/details_horizontal_margin"
        android:paddingTop="@dimen/details_vertical_margin"
        android:paddingBottom="@dimen/details_vertical_margin">

        <TextView
            android:id="@+id/outage_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/outage_ip_address_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_ip_address" />

        <TextView
            android:id="@+id/outage_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/outage_ip_interface_id_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_ip_interface_id" />

        <TextView
            android:id="@+id/outage_ip_interface_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/outage_service_id_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_service_id" />

        <TextView
            android:id="@+id/outage_service_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/outage_service_type_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_service_type" />

        <TextView
            android:id="@+id/outage_service_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/outage_node_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_node" />

        <TextView
            android:id="@+id/outage_node"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/outage_lost_service_event_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_lost_event" />

        <TextView
            android:id="@+id/outage_lost_service_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/outage_regained_service_event_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_section_margin_top"
            android:text="@string/outage_details_regained_event" />

        <TextView
            android:id="@+id/outage_regained_service_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>