<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/node_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/details_layout_padding">

        <TextView
            android:id="@+id/node_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/node_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_id"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/node_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_type_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_type" />

        <TextView
            android:id="@+id/node_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_sys_object_id_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_sys_object_id" />

        <TextView
            android:id="@+id/node_sys_object_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_creation_time_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_creation_time" />

        <TextView
            android:id="@+id/node_creation_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_contact_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_contact" />

        <TextView
            android:id="@+id/node_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_label_source_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_label_source" />

        <TextView
            android:id="@+id/node_label_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_location_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_location" />

        <TextView
            android:id="@+id/node_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/node_description_title"
            style="@style/DetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/details_section_padding_top"
            android:text="@string/node_details_description" />

        <TextView
            android:id="@+id/node_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>